--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@ layout: false
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="baidu-site-verification" content="codeva-fiSpow0Rsf" />
     <meta http-equiv="refresh" content="0; url=/recommend/" />
     <link rel="canonical" href="/recommend/" />
     <title>跳转中...</title>
