--- a/src/en/index.html
+++ b/src/en/index.html
@@ -7,16 +7,16 @@ layout: false
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="refresh" content="0; url=/en/recommend/" />
-    <link rel="canonical" href="/en/recommend/" />
+    <meta http-equiv="refresh" content="0; url=/vpn/en/recommend/" />
+    <link rel="canonical" href="/vpn/en/recommend/" />
     <title>Redirecting...</title>
   </head>
   <body>
     <script>
-      window.location.replace('/en/recommend/');
+      window.location.replace('/vpn/en/recommend/');
     </script>
     <noscript>
-      <p>Redirecting to <a href="/en/recommend/">/en/recommend/</a> ...</p>
+      <p>Redirecting to <a href="/vpn/en/recommend/">/vpn/en/recommend/</a> ...</p>
     </noscript>
   </body>
 </html>
