--- a/src/en/recommend/index.html
+++ b/src/en/recommend/index.html
@@ -2,7 +2,7 @@
 layout: base.njk
 title: VPN Recommendations & Reviews
 description: Scenario-based VPN recommendations and reviews focused on privacy protection and connection security.
-permalink: /en/recommend/
+permalink: /vpn/en/recommend/
 lang: en
 ---
 
@@ -28,7 +28,7 @@ lang: en
 
 <p>
   Many people use a VPN not only for entertainment, but to reduce account risk on public Wi‑Fi, improve cross-border connectivity for work and study, and protect everyday privacy.
-  For details, see <a href="/en/vpn-review-methodology/">our review methodology</a>.
+  For details, see <a href="/vpn/en/review-methodology/">our review methodology</a>.
 </p>
 
 <ul>
@@ -162,7 +162,7 @@ lang: en
     </div>
     <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.purevpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check PureVPN pricing</a>
-      <a href="/en/posts/purevpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read PureVPN review</a>
+      <a href="/vpn/en/posts/purevpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read PureVPN review</a>
     </div>
   </div>
 
@@ -180,7 +180,7 @@ lang: en
     </div>
     <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.nordvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check NordVPN deals</a>
-      <a href="/en/posts/nordvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read NordVPN review</a>
+      <a href="/vpn/en/posts/nordvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read NordVPN review</a>
     </div>
   </div>
 
@@ -198,7 +198,7 @@ lang: en
     </div>
     <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.surfshark }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check Surfshark deals</a>
-      <a href="/en/posts/surfshark-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read Surfshark review</a>
+      <a href="/vpn/en/posts/surfshark-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read Surfshark review</a>
     </div>
   </div>
 
@@ -216,7 +216,7 @@ lang: en
     </div>
     <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.protonvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check Proton VPN plans</a>
-      <a href="/en/posts/protonvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read Proton VPN review</a>
+      <a href="/vpn/en/posts/protonvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read Proton VPN review</a>
     </div>
   </div>
 </div>
@@ -239,7 +239,7 @@ lang: en
         <div style="margin-top: 4px; line-height: 1.7; color: rgba(0,0,0,0.75);">Strong long-term stability, broad global coverage, and mature protocols. A safer all-round option for users who want reliability.</div>
         <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
           <a href="{{ go_defaults.nordvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check NordVPN</a>
-          <a href="/en/posts/nordvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read NordVPN review</a>
+          <a href="/vpn/en/posts/nordvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read NordVPN review</a>
         </div>
       </div>
 
@@ -248,7 +248,7 @@ lang: en
         <div style="margin-top: 4px; line-height: 1.7; color: rgba(0,0,0,0.75);">Lower long-term subscription cost while staying broadly usable. A good choice if you care about long-term value.</div>
         <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
           <a href="{{ go_defaults.purevpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check PureVPN</a>
-          <a href="/en/posts/purevpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read PureVPN review</a>
+          <a href="/vpn/en/posts/purevpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read PureVPN review</a>
         </div>
       </div>
 
@@ -257,7 +257,7 @@ lang: en
         <div style="margin-top: 4px; line-height: 1.7; color: rgba(0,0,0,0.75);">Known for privacy posture and transparency, with a clear logging policy. Better for users who prioritize privacy and security.</div>
         <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
           <a href="{{ go_defaults.protonvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check Proton VPN</a>
-          <a href="/en/posts/protonvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read Proton VPN review</a>
+          <a href="/vpn/en/posts/protonvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read Proton VPN review</a>
         </div>
       </div>
 
@@ -266,7 +266,7 @@ lang: en
         <div style="margin-top: 4px; line-height: 1.7; color: rgba(0,0,0,0.75);">Good value for multiple devices and generally easy to use. Best for users who want decent performance without overspending.</div>
         <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
           <a href="{{ go_defaults.surfshark }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check Surfshark</a>
-          <a href="/en/posts/surfshark-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read Surfshark review</a>
+          <a href="/vpn/en/posts/surfshark-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read Surfshark review</a>
         </div>
       </div>
 
@@ -275,7 +275,7 @@ lang: en
         <div style="margin-top: 4px; line-height: 1.7; color: rgba(0,0,0,0.75);">A premium, mature product with a solid client experience and consistent global network quality.</div>
         <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
           <a href="{{ go_defaults.expressvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check ExpressVPN</a>
-          <a href="/en/posts/expressvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read ExpressVPN review</a>
+          <a href="/vpn/en/posts/expressvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read ExpressVPN review</a>
         </div>
       </div>
     </div>
@@ -294,25 +294,25 @@ lang: en
     <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">A more “out‑of‑the‑box, less tweaking” option for users who are sensitive to stability and overall experience.</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.expressvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check ExpressVPN</a>
-      <a href="/en/posts/expressvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
+      <a href="/vpn/en/posts/expressvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
     </div>
   </div>
 
   <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
     <div style="font-weight: 800;">📺 Streaming / scenario-based servers (less trial and error) — <span style="font-weight: 900; color: #111827;">CyberGhost</span></div>
-    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">If you prefer a clearer “streaming / use‑case entry”, CyberGhost’s scenario-based approach is easier to start with.</div>
+    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">If you prefer a clearer “streaming / use‑case entry”, CyberGhost’s scenario-based approach is easier to start with. It’s a mainstream brand, but not typically a “top-tier rankings regular”.</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.cyberghost }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check CyberGhost</a>
-      <a href="/en/posts/cyberghost-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
+      <a href="/vpn/en/posts/cyberghost-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
     </div>
   </div>
 
   <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
     <div style="font-weight: 800;">🧰 Technical / configurable (split tunneling, ports, etc.) — <span style="font-weight: 900; color: #111827;">PIA</span></div>
-    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">Better for users who know what they need and are willing to tune settings (protocols, ports, routing rules).</div>
+    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">Better for users who know what they need and are willing to tune settings (protocols, ports, routing rules). It’s a mainstream “toolbox” VPN, not a top-tier set-and-forget pick.</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.pia }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check PIA</a>
-      <a href="/en/posts/pia-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
+      <a href="/vpn/en/posts/pia-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
     </div>
   </div>
 
@@ -321,7 +321,7 @@ lang: en
     <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">Better for budget-minded users who want a low-cost trial first. If you later confirm long-term needs, consider upgrading to a more comprehensive option.</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.ivacy }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check Ivacy</a>
-      <a href="/en/posts/ivacy-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
+      <a href="/vpn/en/posts/ivacy-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
     </div>
   </div>
 
@@ -330,7 +330,7 @@ lang: en
     <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">Best for users who value anonymity and are willing to follow the official setup instructions. There’s a higher learning curve for beginners.</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.mullvad }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check Mullvad</a>
-      <a href="/en/posts/mullvad-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
+      <a href="/vpn/en/posts/mullvad-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
     </div>
   </div>
 
@@ -339,7 +339,7 @@ lang: en
     <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">A decent backup option if you prefer something simple and “good enough” without many extra features.</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.strongvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check StrongVPN</a>
-      <a href="/en/posts/strongvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
+      <a href="/vpn/en/posts/strongvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
     </div>
   </div>
 
@@ -348,7 +348,7 @@ lang: en
     <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">For tighter budgets and basic needs. If you care more about stability/features, start with the top recommended picks above.</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.atlas }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check Atlas VPN</a>
-      <a href="/en/posts/atlas-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
+      <a href="/vpn/en/posts/atlas-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read review</a>
     </div>
   </div>
 </div>
