--- a/src/recommend/index.html
+++ b/src/recommend/index.html
@@ -2,7 +2,7 @@
 layout: base.njk
 title: VPN 推荐与评测
 description: 面向普通用户的 VPN 推荐与评测：按使用场景快速选型，包含总览、闭眼选系列、跨境系列与常见问题。
-permalink: /recommend/
+permalink: /vpn/recommend/
 ---
 
 <div style="margin: 10px 0 16px; padding: 10px 12px; border: 1px solid rgba(0,0,0,0.12); border-radius: 8px; background: rgba(0,0,0,0.03);">
@@ -29,7 +29,7 @@ permalink: /recommend/
 <h2 id="why">🧾一、 为什么要做这份 VPN 评测？</h2>
 
 <p>
-很多用户选择 VPN，并不只出于“娱乐”目的，而是在日常的工作、学习和跨境使用中，反复遇到一些普遍的问题：账号登录频繁异常、公共 Wi-Fi 使用存在安全隐患、跨境服务不稳定、或是部分在线工具和服务偶发性无法正常连接。<a href="/vpn-review-methodology/">查看我们如何评测与排序</a>
+很多用户选择 VPN，并不只出于“娱乐”目的，而是在日常的工作、学习和跨境使用中，反复遇到一些普遍的问题：账号登录频繁异常、公共 Wi-Fi 使用存在安全隐患、跨境服务不稳定、或是部分在线工具和服务偶发性无法正常连接。<a href="/vpn/review-methodology/">查看我们如何评测与排序</a>
 </p>
 
 <ul>
@@ -201,7 +201,7 @@ permalink: /recommend/
     </div>
     <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.purevpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 PureVPN 最低价</a>
-      <a href="/posts/purevpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 PureVPN 评测</a>
+      <a href="/vpn/posts/purevpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 PureVPN 评测</a>
     </div>
   </div>
 
@@ -220,7 +220,7 @@ permalink: /recommend/
     </div>
     <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.nordvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 NordVPN 优惠</a>
-      <a href="/posts/nordvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 NordVPN 评测</a>
+      <a href="/vpn/posts/nordvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 NordVPN 评测</a>
     </div>
   </div>
 
@@ -239,7 +239,7 @@ permalink: /recommend/
     </div>
     <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.surfshark }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Surfshark 优惠</a>
-      <a href="/posts/surfshark-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 Surfshark 评测</a>
+      <a href="/vpn/posts/surfshark-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 Surfshark 评测</a>
     </div>
   </div>
 
@@ -258,7 +258,7 @@ permalink: /recommend/
     </div>
     <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.protonvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Proton VPN 方案</a>
-      <a href="/posts/protonvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 Proton VPN 评测</a>
+      <a href="/vpn/posts/protonvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 Proton VPN 评测</a>
     </div>
   </div>
 </div>
@@ -281,7 +281,7 @@ permalink: /recommend/
         <div style="margin-top: 4px; line-height: 1.7; color: rgba(0,0,0,0.75);">在<strong>长期稳定性、全球节点覆盖、协议成熟度</strong>等方面表现突出，同时具备清晰的隐私政策与成熟的客户端体验，适合希望获得“整体最稳妥方案”的用户。</div>
         <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
           <a href="{{ go_defaults.nordvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 NordVPN</a>
-          <a href="/posts/nordvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 NordVPN 评测</a>
+          <a href="/vpn/posts/nordvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 NordVPN 评测</a>
         </div>
       </div>
 
@@ -290,7 +290,7 @@ permalink: /recommend/
         <div style="margin-top: 4px; line-height: 1.7; color: rgba(0,0,0,0.75);">在保持较完整节点覆盖与基础稳定性的前提下，<strong>长期订阅成本更低</strong>，适合重视<strong>性价比与长期使用成本</strong>、但又不希望牺牲基础可用性的用户。</div>
         <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
           <a href="{{ go_defaults.purevpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 PureVPN</a>
-          <a href="/posts/purevpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 PureVPN 评测</a>
+          <a href="/vpn/posts/purevpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 PureVPN 评测</a>
         </div>
       </div>
 
@@ -299,7 +299,7 @@ permalink: /recommend/
         <div style="margin-top: 4px; line-height: 1.7; color: rgba(0,0,0,0.75);">以<strong>隐私保护、透明度和安全审计</strong>见长，日志策略清晰，适合对<strong>数据保护与隐私合规</strong>要求更高的用户，即便在价格或速度上不追求极致。</div>
         <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
           <a href="{{ go_defaults.protonvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Proton VPN</a>
-          <a href="/posts/protonvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 Proton VPN 评测</a>
+          <a href="/vpn/posts/protonvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 Proton VPN 评测</a>
         </div>
       </div>
 
@@ -308,7 +308,7 @@ permalink: /recommend/
         <div style="margin-top: 4px; line-height: 1.7; color: rgba(0,0,0,0.75);">在<strong>多设备支持、易用性与整体性价比</strong>方面表现均衡，适合需要在多台设备上同时使用、并希望控制成本的用户群体。</div>
         <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
           <a href="{{ go_defaults.surfshark }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Surfshark</a>
-          <a href="/posts/surfshark-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 Surfshark 评测</a>
+          <a href="/vpn/posts/surfshark-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 Surfshark 评测</a>
         </div>
       </div>
 
@@ -317,7 +317,7 @@ permalink: /recommend/
         <div style="margin-top: 4px; line-height: 1.7; color: rgba(0,0,0,0.75);">作为成熟品牌，在<strong>客户端体验、协议稳定性和全球网络质量</strong>方面长期保持较高水准，适合希望“少折腾、重体验”的用户。</div>
         <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
           <a href="{{ go_defaults.expressvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 ExpressVPN</a>
-          <a href="/posts/expressvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 ExpressVPN 评测</a>
+          <a href="/vpn/posts/expressvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 ExpressVPN 评测</a>
         </div>
       </div>
     </div>
@@ -327,7 +327,7 @@ permalink: /recommend/
 <blockquote>
   💡 <strong>减少试错：</strong>如果你已经明确自己的使用场景，可以从我们评测中表现较稳定的 VPN 开始尝试，优先选择提供退款保障或灵活订阅方案的服务，降低试错成本。
   <br />
-  <a href="/vpn-review-methodology/">查看我们如何评测与排序</a>
+  <a href="/vpn/review-methodology/">查看我们如何评测与排序</a>
 </blockquote>
 
 <h2 id="secondary">🧩七、 备选系列</h2>
@@ -342,25 +342,25 @@ permalink: /recommend/
     <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">更偏“开箱即用、少折腾”的选择，适合对稳定体验更敏感的用户。</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.expressvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 ExpressVPN</a>
-      <a href="/posts/expressvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
+      <a href="/vpn/posts/expressvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
     </div>
   </div>
 
   <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
     <div style="font-weight: 800;">📺 流媒体/场景化服务器（少试错）— <span style="font-weight: 900; color: #111827;">CyberGhost</span></div>
-    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">如果你希望有更明确的“流媒体/用途入口”，CyberGhost 的场景化思路更容易上手。</div>
+    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">如果你希望有更明确的“流媒体/用途入口”，CyberGhost 的场景化思路更容易上手；它属于主流大市场品牌，但通常不算“顶级榜单常客”。</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.cyberghost }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 CyberGhost</a>
-      <a href="/posts/cyberghost-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
+      <a href="/vpn/posts/cyberghost-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
     </div>
   </div>
 
   <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
     <div style="font-weight: 800;">🧰 技术/可配置（分流/端口等）— <span style="font-weight: 900; color: #111827;">PIA</span></div>
-    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">更适合愿意自己调参数、对分流/端口等进阶功能有明确需求的人。</div>
+    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">更适合愿意自己调参数、对分流/端口等进阶功能有明确需求的人；它属于主流品牌，偏“工具箱”，但通常不属于顶级省心那一档。</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.pia }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 PIA</a>
-      <a href="/posts/pia-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
+      <a href="/vpn/posts/pia-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
     </div>
   </div>
 
@@ -369,7 +369,7 @@ permalink: /recommend/
     <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">更适合预算敏感、想先用更低成本试用的用户；如果你之后确定长期需求，再考虑升级到更全面的方案。</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.ivacy }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Ivacy VPN</a>
-      <a href="/posts/ivacy-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
+      <a href="/vpn/posts/ivacy-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
     </div>
   </div>
 
@@ -378,7 +378,7 @@ permalink: /recommend/
     <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">更适合特别看重匿名性、并且愿意按官方说明配置的用户；对新手来说上手门槛会更高一些。</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.mullvad }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Mullvad</a>
-      <a href="/posts/mullvad-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
+      <a href="/vpn/posts/mullvad-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
     </div>
   </div>
 
@@ -387,7 +387,7 @@ permalink: /recommend/
     <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">适合作为备选：如果你更在意“简单、够用”，不追求很多花哨功能。</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.strongvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 StrongVPN</a>
-      <a href="/posts/strongvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
+      <a href="/vpn/posts/strongvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
     </div>
   </div>
 
@@ -396,7 +396,7 @@ permalink: /recommend/
     <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">适合预算更紧、只想先满足基础需求的用户；如果你对速度/稳定/功能要求更高，建议优先看前面 4 款。</div>
     <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.atlas }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Atlas VPN</a>
-      <a href="/posts/atlas-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
+      <a href="/vpn/posts/atlas-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
     </div>
   </div>
 </div>
