--- a/src/review-methodology/index.html
+++ b/src/review-methodology/index.html
@@ -2,7 +2,7 @@
 layout: base.njk
 title: VPN 评测方法说明
 description: 说明本站 VPN 评测与排序方法：评估维度、参考依据、适用范围与局限。
-permalink: /vpn-review-methodology/
+permalink: /vpn/review-methodology/
 ---
 
 <h2>🧪 我们如何做 VPN 评测与排序</h2>
@@ -68,5 +68,5 @@ permalink: /vpn-review-methodology/
 </p>
 
 <div style="margin: 12px 0; display:flex; gap: 10px; flex-wrap: wrap;">
-  <a href="/recommend/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">直接去看：按场景整理的 VPN 推荐榜单</a>
+  <a href="/vpn/recommend/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">直接去看：按场景整理的 VPN 推荐榜单</a>
 </div>
