--- a/src/en/review-methodology/index.html
+++ b/src/en/review-methodology/index.html
@@ -2,7 +2,7 @@
 layout: base.njk
 title: VPN Review Methodology
 description: How we evaluate VPN services.
-permalink: /en/vpn-review-methodology/
+permalink: /vpn/en/review-methodology/
 lang: en
 ---
 
@@ -65,5 +65,5 @@ lang: en
 </p>
 
 <div style="margin: 12px 0; display:flex; gap: 10px; flex-wrap: wrap;">
-  <a href="/en/recommend/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">View VPN recommendations based on this methodology</a>
+  <a href="/vpn/en/recommend/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">View VPN recommendations based on this methodology</a>
 </div>
