--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,16 @@ layout: false
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="baidu-site-verification" content="codeva-fiSpow0Rsf" />
-    <meta http-equiv="refresh" content="0; url=/recommend/" />
-    <link rel="canonical" href="/recommend/" />
+    <meta http-equiv="refresh" content="0; url=/vpn/recommend/" />
+    <link rel="canonical" href="/vpn/recommend/" />
     <title>跳转中...</title>
   </head>
   <body>
     <script>
-      window.location.replace('/recommend/');
+      window.location.replace('/vpn/recommend/');
     </script>
     <noscript>
-      <p>正在跳转到 <a href="/recommend/">/recommend/</a> ...</p>
+      <p>正在跳转到 <a href="/vpn/recommend/">/vpn/recommend/</a> ...</p>
     </noscript>
   </body>
 </html>
