--- a/src/en/recommend/index.html
+++ b/src/en/recommend/index.html
@@ -157,8 +157,8 @@ lang: en
       <div style="text-align:right; color: rgba(0,0,0,0.65);">🛡️ 31‑day refund</div>
     </div>
     <div style="margin-top: 10px; line-height: 1.7;">
-      <div><strong>Why:</strong> strong discounts + good long‑term value</div>
-      <div><strong>Best for:</strong> budget‑minded users planning to use a VPN long‑term</div>
+      <div><strong>Why:</strong> a well‑balanced pick across price, features, privacy, and long‑term usability</div>
+      <div><strong>Best for:</strong> a first VPN or a “choose once, use long‑term” option with less regret</div>
     </div>
     <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.purevpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check PureVPN pricing</a>
