--- a/src/recommend/index.html
+++ b/src/recommend/index.html
@@ -195,9 +195,9 @@ permalink: /vpn/recommend/
       <div style="text-align:right; color: rgba(0,0,0,0.65);">🛡️ 31 天退款</div>
     </div>
     <div style="margin-top: 10px; line-height: 1.7;">
-      <div><strong>核心卖点：</strong>强折扣 + 适合长期使用（更容易“买了不后悔”）</div>
+      <div><strong>核心卖点：</strong>价格、功能、隐私与长期体验更均衡（更适合“一次选择、长期使用”）</div>
       <div><strong>当前优惠：</strong>常见大幅折扣（以官网实时活动为准）</div>
-      <div><strong>适合人群：</strong>价格敏感 / 想长期用 / 追求省心</div>
+      <div><strong>适合人群：</strong>想选第一款/长期使用 / 不想每年折腾换 VPN / 希望少踩坑</div>
     </div>
     <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
       <a href="{{ go_defaults.purevpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 PureVPN 最低价</a>
